With AspectJ but logging not working.

--- a/moduleaspect/build.gradle
+++ b/moduleaspect/build.gradle
@@ -12,6 +12,10 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'org.aspectj:aspectjrt:1.9.24'
+    implementation project(':modulebase')
+    implementation project(':moduleone')
+    implementation project(':moduletwo')
 }
 
 test {
