--- a/moduleaspect/build.gradle
+++ b/moduleaspect/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'org.aspectj:aspectjrt:1.9.24'
+    implementation 'org.aspectj:aspectjweaver:1.9.24'
     implementation project(':modulebase')
     implementation project(':moduleone')
     implementation project(':moduletwo')
