--- a/moduleexecute/build.gradle
+++ b/moduleexecute/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'com.chitturi.chala'
@@ -15,6 +16,26 @@ dependencies {
     implementation project(':modulebase')
     implementation project(':moduleone')
     implementation project(':moduletwo')
+    implementation project(':moduleaspect')
+}
+
+shadowJar {
+    // 1. Specify the fully qualified name of your main application class
+    manifest {
+        attributes 'Main-Class': 'com.chitturi.chala.aspectjgradle.moduleexecute.MainExecutor'
+
+        // 2. (Optional) Add other custom attributes
+        attributes 'Implementation-Title': project.name
+        attributes 'Implementation-Version': project.version
+    }
+
+    // 3. (Crucial for multi-module) Include the compiled output of all dependent modules
+    configurations = [project.configurations.runtimeClasspath]
+
+    // 4. Exclude signature files from signed dependencies to prevent errors
+    exclude 'META-INF/*.SF'
+    exclude 'META-INF/*.DSA'
+    exclude 'META-INF/*.RSA'
 }
 
 test {
